--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ImageBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ImageBlockTableViewCell.xib
@@ -7,30 +7,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="417" id="KGk-i7-Jjw" customClass="ImageBlockTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="417" id="KGk-i7-Jjw" customClass="ImageBlockTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="417"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fvj-ka-sv0">
-                        <rect key="frame" x="42" y="222" width="320" height="186"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfP-Ht-jrX">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfP-Ht-jrX">
                         <rect key="frame" x="8" y="8" width="304" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fvj-ka-sv0">
+                        <rect key="frame" x="8" y="37" width="304" height="371"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="E5d-5C-2Uu"/>
-                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="EbJ-Lb-SFY"/>
-                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Pbp-Nu-PVv"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="0Eh-NV-1Ns"/>
+                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Ar4-xv-9kM"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="top" secondItem="NfP-Ht-jrX" secondAttribute="bottom" constant="8" id="HJm-nZ-vJ6"/>
+                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="I0G-si-Ef1"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IRi-Ha-Lkq"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="tN1-Yy-vGZ"/>
+                    <constraint firstItem="NfP-Ht-jrX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wZV-hh-Rwa"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="410" y="656.5"/>
+            <connections>
+                <outlet property="image" destination="Fvj-ka-sv0" id="JRJ-wL-cvq"/>
+                <outlet property="titleLabel" destination="NfP-Ht-jrX" id="X1m-MY-cGj"/>
+            </connections>
+            <point key="canvasLocation" x="529" y="655.5"/>
         </tableViewCell>
     </objects>
 </document>
