--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/TextBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/TextBlockTableViewCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TextBlockTableViewCell" rowHeight="66" id="KGk-i7-Jjw" customClass="TextBlockTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TextBlockTableViewCell" id="KGk-i7-Jjw" customClass="TextBlockTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -28,13 +28,13 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="lyM-0e-zyp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0Z2-8R-RDD"/>
-                    <constraint firstItem="YCE-yb-Hto" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="1iw-OB-Hoi"/>
-                    <constraint firstItem="lyM-0e-zyp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="8qT-Bz-6a1"/>
-                    <constraint firstItem="lyM-0e-zyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="9nv-fg-Zzh"/>
-                    <constraint firstItem="lyM-0e-zyp" firstAttribute="top" secondItem="YCE-yb-Hto" secondAttribute="bottom" constant="8" id="WnA-pA-WMw"/>
-                    <constraint firstItem="YCE-yb-Hto" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="dEt-PP-cdW"/>
-                    <constraint firstItem="YCE-yb-Hto" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="qRa-Qo-Jn5"/>
+                    <constraint firstItem="lyM-0e-zyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="5za-7z-h1p"/>
+                    <constraint firstItem="lyM-0e-zyp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="8bo-c7-lEX"/>
+                    <constraint firstItem="lyM-0e-zyp" firstAttribute="top" secondItem="YCE-yb-Hto" secondAttribute="bottom" constant="8" id="IGn-5F-Lvb"/>
+                    <constraint firstItem="lyM-0e-zyp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IMg-2J-lEC"/>
+                    <constraint firstItem="YCE-yb-Hto" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Nzc-9I-Dhp"/>
+                    <constraint firstItem="YCE-yb-Hto" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="VTo-lb-kk4"/>
+                    <constraint firstItem="YCE-yb-Hto" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="mZb-ef-4aC"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
